feat: criando registro de usuarios e testes de criacao de users

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
+PORT=number
 DATABASE_URL="postgresql://postgres:minhaSenhaSuperSecreta@meu-db.example.us-east-1.rds.amazonaws.com:5432/estoque_vendas?schema=public"
