--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@dmalbuquerque/cpf-cnpj-validator": "^1.0.3",
     "@prisma/client": "^6.16.2",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.2",
